# libholdem

./: .gitignore  CMakeLists.txt  Makefile  card.c  card_test.c  deck.c  holdem.h  init.c  play.c  player.c  tests.c
src/: CMakeLists.txt  deck.c  holdem_version.h  holdem_version.h.in  init.c
test/: CMakeLists.txt  tests.c
